Refactoring and Retesting

--- a/chesslib.org
+++ b/chesslib.org
@@ -1,9 +1,9 @@
 * Requirements
 ** Atomic Objects
-*** peice
+*** piece
 *** Square
-    A location object, capabable of initializing from an algebraic notation string and
-    deferencing to a linear index on a board object
+    A location object, capable of initializing from an algebraic notation string and
+    dereferencing to a linear index on a board object
 ** board
 A 2d vector of 64 pieces, each element can be access by entering a square
 *** board(sting & fen | fen)
